--- a/Final/Packages/manifest.json
+++ b/Final/Packages/manifest.json
@@ -13,7 +13,8 @@
     "com.unity.polybrush": "1.1.2",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.probuilder": "5.1.1",
-    "com.unity.render-pipelines.universal": "12.1.12",
+    "com.unity.render-pipelines.core": "12.1.8",
+    "com.unity.render-pipelines.universal": "12.1.8",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.5",
