--- a/Final/Packages/manifest.json
+++ b/Final/Packages/manifest.json
@@ -12,9 +12,13 @@
     "com.unity.inputsystem": "1.7.0",
     "com.unity.polybrush": "1.1.2",
     "com.unity.postprocessing": "3.2.2",
+
     "com.unity.probuilder": "5.1.1",
     "com.unity.render-pipelines.core": "12.1.8",
     "com.unity.render-pipelines.universal": "12.1.8",
+    "com.unity.probuilder": "5.2.0",
+    "com.unity.render-pipelines.core": "12.1.13",
+    "com.unity.render-pipelines.universal": "12.1.13",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.5",
